<resources>
    <string name="app_name">SpaceX Fan Application</string>
    <string name="appName">SpaceX Fan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="empty_email_error">Please enter Email</string>
    <string name="invalid_email_error">Please enter valid Email</string>
    <string name="invalid_password_error">Password must be >8 characters</string>
    <string name="empty_password_error">Please enter Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="no_internet_connection">No Internet Connection. Please check your Wifi/Mobile data settings.</string>
    <string name="error">Error</string>
    <string name="invitations">Invitations</string>
    <string name="home">Home</string>
    <string name="space_x_rockets">SpaceX Rockets</string>
    <string name="favorite_rockets">Favorite Rockets</string>
    <string name="upcoming_launches">Upcoming Launches</string>
    <string name="retry">Retry</string>
    <string name="sign_out">Sign out</string>
</resources>