<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.authentication.signIn.SignInActivity">
        <TextView
            android:id="@+id/txtSignInHeading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/sign_in"
            android:textSize="@dimen/sp16"
            android:textColor="@color/sand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:theme="@style/myTextInputLabel"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/password"
            android:theme="@style/myTextInputLabel"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/sign_in"
            android:layout_marginTop="@dimen/dp10"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />
        <include
            android:id="@+id/progressSignIn"
            layout="@layout/base_progress_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
